--- a/src/views/admin/all-tables/main.ejs
+++ b/src/views/admin/all-tables/main.ejs
@@ -3,7 +3,7 @@
     <h3>Tất cả các đơn đặt bàn</h3>
   </section>
 
-  <div class="actions">
+  <div class="top-actions">
     <button class="action" data-bs-toggle="modal" data-bs-target="#add-table-modal">
       <i class="bi bi-plus-lg"></i>
       <span>Thêm bàn mới</span>
@@ -137,8 +137,8 @@
                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
                 </button>
                 <ul class="dropdown-menu">
-                  <li><button class="dropdown-item" data-kb-table-status="Available">Còn trống</button></li>
-                  <li><button class="dropdown-item" data-kb-table-status="Maintenance">Bảo trì</button></li>
+                  <li><div class="dropdown-item" data-kb-table-status="Available">Còn trống</div></li>
+                  <li><div class="dropdown-item" data-kb-table-status="Maintenance">Bảo trì</div></li>
                 </ul>
               </div>
             </div>
