--- a/public/admin/all-bookings/all-bookings-page.scss
+++ b/public/admin/all-bookings/all-bookings-page.scss
@@ -85,6 +85,9 @@
                   &.approved {
                      background-color: gs.$success-color;
                   }
+                  &.arrived {
+                     background-color: #7700ff;
+                  }
                }
             }
 
@@ -120,32 +123,39 @@
             .booking-actions {
                display: flex;
                align-items: center;
-               justify-content: space-between;
+               justify-content: end;
                margin-top: 5px;
+               gap: 10px;
 
-               .actions {
+               .action-btn {
                   display: flex;
                   align-items: center;
-                  gap: 10px;
+                  gap: 5px;
+                  border-radius: 6px;
+                  background-color: gs.$dark-bg;
+                  color: white;
+                  outline: none;
+                  border: none;
+                  padding: 6px 15px;
+                  text-decoration: none;
+                  border: 2px gs.$dark-bg solid;
+                  margin-top: 5px;
 
-                  .action-btn {
-                     display: flex;
-                     align-items: center;
-                     gap: 5px;
-                     border-radius: 6px;
-                     background-color: gs.$dark-bg;
-                     color: white;
-                     outline: none;
-                     border: none;
-                     padding: 6px 15px;
-                     text-decoration: none;
-                     border: 2px gs.$dark-bg solid;
-                     margin-top: 5px;
+                  &:hover {
+                     background-color: white;
+                     color: gs.$dark-bg;
 
-                     &:hover {
-                        background-color: white;
+                     .spinner-border {
                         color: gs.$dark-bg;
                      }
+                  }
+
+                  .spinner-border {
+                     display: flex;
+                     height: 19.2px;
+                     width: 19.2px;
+                     color: white;
+                     margin: 0 auto;
                   }
                }
             }
@@ -170,6 +180,120 @@
             i {
                font-size: 3rem;
             }
+         }
+      }
+   }
+}
+
+#filter-bookings-form {
+   padding: 16px;
+   background: #f9f9f9;
+   border-radius: 8px;
+   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+   margin: 15px 0 20px;
+
+   .filter-bookings-title {
+      font-size: 1.3rem;
+      font-weight: bold;
+   }
+
+   .form-groups {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 16px;
+      border-radius: 8px;
+      width: 100%;
+      margin-top: 5px;
+
+      .form-group {
+         flex: 1 1 calc(50% - 16px);
+         display: flex;
+         flex-direction: column;
+         margin-top: 15px;
+
+         label {
+            font-weight: bold;
+            color: gs.$gray;
+            margin-bottom: 4px;
+            padding-left: 5px;
+         }
+
+         input,
+         p,
+         textarea,
+         .dropdown-toggle {
+            background-color: white;
+            padding: 8px;
+            border-radius: 4px;
+            box-shadow: 0 0 1px gray;
+            margin: 0;
+            outline: none;
+            border: none;
+         }
+
+         .dropdown {
+            flex-grow: 1;
+
+            .dropdown-toggle {
+               display: flex;
+               justify-content: space-between;
+               align-items: center;
+               gap: 10px;
+               color: black;
+               width: 100%;
+               height: 100%;
+
+               &::after {
+                  color: gray;
+               }
+            }
+
+            .dropdown-menu {
+               .dropdown-item {
+                  padding-top: 8px;
+                  padding-bottom: 8px;
+                  cursor: pointer;
+               }
+            }
+         }
+      }
+   }
+
+   .btns {
+      display: flex;
+      justify-content: end;
+      gap: 10px;
+      margin-top: 10px;
+
+      .submit-btn {
+         display: flex;
+         align-items: center;
+         gap: 5px;
+         border-radius: 6px;
+         background-color: gs.$dark-bg;
+         color: white;
+         outline: none;
+         border: none;
+         padding: 6px 15px;
+         text-decoration: none;
+         border: 2px gs.$dark-bg solid;
+         margin-top: 5px;
+
+         &:hover {
+            background-color: white;
+            color: gs.$dark-bg;
+
+            .spinner-border {
+               color: gs.$dark-bg;
+            }
+         }
+
+         .spinner-border {
+            display: flex;
+            height: 19.2px;
+            width: 19.2px;
+            color: white;
+            margin: 0 auto;
          }
       }
    }
