--- a/public/admin/all-tables/all-tables-page.css
+++ b/public/admin/all-tables/all-tables-page.css
@@ -77,13 +77,13 @@ footer p {
 #main-section .title-section h3 {
   font-weight: bold;
 }
-#main-section .actions {
+#main-section .top-actions {
   display: flex;
   justify-content: end;
   gap: 15px;
   margin-top: 20px;
 }
-#main-section .actions .action {
+#main-section .top-actions .action {
   display: flex;
   gap: 5px;
   align-items: center;
@@ -93,7 +93,7 @@ footer p {
   border: 2px #1f2937 solid;
   padding: 6px 15px;
 }
-#main-section .actions .action:hover {
+#main-section .top-actions .action:hover {
   background-color: white;
   color: #1f2937;
 }
@@ -139,6 +139,7 @@ footer p {
   border-radius: 4px;
   border-width: 2px;
   border-style: solid;
+  color: white;
 }
 #restaurant-tables table tbody td .actions .action.delete {
   background-color: red;
@@ -315,6 +316,11 @@ footer p {
 }
 #update-table-form .form-groups .form-group .dropdown .dropdown-toggle::after {
   color: gray;
+}
+#update-table-form .form-groups .form-group .dropdown .dropdown-menu .dropdown-item {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  cursor: pointer;
 }
 #update-table-form .form-groups .form-group .message {
   color: red;
