--- a/public/admin/processing/processing-page.scss
+++ b/public/admin/processing/processing-page.scss
@@ -6,6 +6,69 @@ $tab-darker-border: #dedede;
 #main-section {
    min-height: calc(100vh - 60.8px - 68.8px);
    padding: 20px 50px 50px 50px;
+
+   .restaurant-tables {
+      margin-top: 10px;
+
+      table {
+         width: 100%;
+         border-collapse: collapse;
+         background: white;
+         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+
+         thead {
+            background-color: gs.$dark-bg; // primary-color
+            color: white;
+         }
+
+         th {
+            padding: 10px 5px;
+            border: 1px solid white; // gray
+            text-align: center;
+         }
+
+         td {
+            padding: 10px 5px;
+            border: 1px solid #4b55635e; // gray
+            text-align: center;
+         }
+
+         tbody {
+            tr {
+               cursor: pointer;
+
+               &:nth-child(even) {
+                  background-color: #f3f4f6; // light-bg
+               }
+
+               &:hover {
+                  background-color: #eab20840;
+               }
+
+               &.maintained {
+                  color: red;
+                  background-color: rgba(255, 0, 0, 0.192);
+                  pointer-events: none;
+               }
+            }
+
+            td {
+               .form-check {
+                  display: flex;
+                  justify-content: center;
+
+                  .form-check-input {
+                     border: 1px gray solid;
+
+                     &:checked {
+                        background-color: gs.$primary-color;
+                     }
+                  }
+               }
+            }
+         }
+      }
+   }
 }
 
 #booking-details {
@@ -93,6 +156,22 @@ $tab-darker-border: #dedede;
                background-color: transparent;
             }
          }
+         &.tables-assigned {
+            input,
+            p,
+            textarea {
+               background-color: transparent;
+            }
+         }
+
+         .message {
+            display: flex;
+            gap: 5px;
+            color: red;
+            font-weight: 500;
+            padding-left: 5px;
+            margin-top: 3px;
+         }
       }
    }
 
@@ -100,6 +179,108 @@ $tab-darker-border: #dedede;
       display: flex;
       justify-content: space-between;
       margin-top: 20px;
+      margin-bottom: 30px;
+
+      .submit-btn {
+         display: flex;
+         align-items: center;
+         gap: 5px;
+         border-radius: 6px;
+         background-color: gs.$dark-bg;
+         color: white;
+         outline: none;
+         border: none;
+         padding: 6px 15px;
+         text-decoration: none;
+         border: 2px gs.$dark-bg solid;
+         margin-top: 5px;
+
+         &:hover {
+            background-color: white;
+            color: gs.$dark-bg;
+
+            .spinner-border {
+               color: gs.$dark-bg;
+            }
+         }
+
+         .spinner-border {
+            display: flex;
+            height: 19.2px;
+            width: 19.2px;
+            color: white;
+            margin: 0 auto;
+         }
+      }
+   }
+}
+
+#filter-tables-form {
+   padding: 16px;
+   background: #f9f9f9;
+   border-radius: 8px;
+   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+   margin: 15px 0 20px;
+
+   .filter-tables-title {
+      font-size: 1.3rem;
+      font-weight: bold;
+   }
+
+   .form-groups {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 16px;
+      border-radius: 8px;
+      width: 100%;
+      margin-top: 5px;
+
+      .form-group {
+         flex: 1 1 calc(50% - 16px);
+         display: flex;
+         flex-direction: column;
+         margin-top: 15px;
+
+         label {
+            font-weight: bold;
+            color: gs.$gray;
+            margin-bottom: 4px;
+            padding-left: 5px;
+         }
+
+         input,
+         p,
+         textarea {
+            background-color: white;
+            padding: 8px;
+            border-radius: 4px;
+            box-shadow: 0 0 1px gray;
+            margin: 0;
+            outline: none;
+            border: none;
+         }
+
+         &.status {
+            input,
+            p,
+            textarea {
+               background-color: transparent;
+            }
+         }
+         &.created-at {
+            input,
+            p,
+            textarea {
+               background-color: transparent;
+            }
+         }
+      }
+   }
+
+   .btns {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 10px;
 
       .submit-btn {
          display: flex;
@@ -236,7 +417,8 @@ $tab-darker-border: #dedede;
             }
          }
 
-         .reject-form {
+         .reject-form,
+         .cancel-form {
             .form-group {
                label {
                   display: block;
@@ -359,20 +541,21 @@ $tab-darker-border: #dedede;
    }
 }
 
-#cancel-booking {
+#update-assign-tables {
    margin-top: 20px;
 
-   .open-cancel-booking-btn {
+   .open-btn {
       display: flex;
       align-items: center;
       gap: 6px;
       color: white;
       padding: 5px 15px;
       border-radius: 4px;
-      background-color: gs.$primary-color;
+      background-color: gs.$dark-bg;
       font-weight: bold;
       font-size: 1rem;
-      border: 2px gs.$primary-color solid;
+      border: 2px gs.$dark-bg solid;
+      margin-bottom: 15px;
 
       &:hover {
          background-color: white;
@@ -380,97 +563,69 @@ $tab-darker-border: #dedede;
       }
    }
 
-   .form-group {
-      label {
-         display: block;
-         color: gs.$gray;
-         font-weight: 600;
-         margin-bottom: 0.3rem;
-         padding-left: 5px;
-      }
-
-      input,
-      textarea {
-         width: 100%;
-         padding: 0.75rem;
-         border: 1px solid #d1d5db;
-         border-radius: 0.375rem;
-         outline: none;
-
-         &:focus {
-            border-color: gs.$primary-color;
-            box-shadow: 0 0 0 2px rgba(234, 179, 8, 0.5);
-         }
-      }
-   }
-
-   .confirm-cancel-booking {
+   .confirm-assign-tables {
       display: flex;
-      justify-content: space-between;
-      margin-top: 10px;
+      justify-content: end;
+      gap: 10px;
+      margin-top: 15px;
 
-      .btns {
-         display: flex;
-         gap: 10px;
+      .escape-btn {
+         color: gs.$dark-bg;
+         font-weight: bold;
+         padding: 4px 15px;
+         border-radius: 6px;
+         border: none;
+         background-color: gs.$dark-bg;
+         border: 2px gs.$dark-bg solid;
+         color: white;
 
-         .cancel-btn {
-            color: gs.$dark-bg;
-            font-weight: bold;
-            padding: 4px 15px;
-            border-radius: 6px;
-            border: none;
-            background-color: gs.$dark-bg;
-            border: 2px gs.$dark-bg solid;
-            color: white;
-
-            &:hover {
-               color: black;
-               background-color: white;
-
-               .spinner-border {
-                  color: gs.$primary-hover;
-               }
-            }
-         }
-
-         .submit-btn {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            border-radius: 6px;
-            padding: 6px 15px;
-            color: white;
-            font-weight: bold;
-            border: 2px gs.$primary-color solid;
-            background-color: gs.$primary-color;
-
-            i {
-               font-size: 1.2rem;
-            }
-
-            &:hover {
-               color: black;
-               background-color: white;
-
-               .spinner-border {
-                  color: gs.$primary-hover;
-               }
-            }
+         &:hover {
+            color: black;
+            background-color: white;
 
             .spinner-border {
-               display: flex;
-               height: 19.2px;
-               width: 19.2px;
-               color: white;
-               margin: 0 auto;
+               color: gs.$primary-hover;
             }
+         }
+      }
+
+      .submit-btn {
+         display: flex;
+         align-items: center;
+         gap: 5px;
+         border-radius: 6px;
+         padding: 6px 15px;
+         color: white;
+         font-weight: bold;
+         border: 2px gs.$primary-color solid;
+         background-color: gs.$primary-color;
+
+         i {
+            font-size: 1.2rem;
+         }
+
+         &:hover {
+            color: black;
+            background-color: white;
+
+            .spinner-border {
+               color: gs.$primary-hover;
+            }
+         }
+
+         .spinner-border {
+            display: flex;
+            height: 19.2px;
+            width: 19.2px;
+            color: white;
+            margin: 0 auto;
          }
       }
    }
 }
 
 #approve-booking {
-   label {
+   .approve-booking-title {
       font-weight: bold;
       font-size: 1.3rem;
       border-bottom: 1px gs.$dark-bg solid;
@@ -493,69 +648,6 @@ $tab-darker-border: #dedede;
 
          i {
             font-size: 1.1rem;
-         }
-      }
-   }
-
-   .restaurant-tables {
-      margin-top: 10px;
-
-      table {
-         width: 100%;
-         border-collapse: collapse;
-         background: white;
-         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-
-         thead {
-            background-color: gs.$dark-bg; // primary-color
-            color: white;
-         }
-
-         th {
-            padding: 10px 5px;
-            border: 1px solid white; // gray
-            text-align: center;
-         }
-
-         td {
-            padding: 10px 5px;
-            border: 1px solid #4b55635e; // gray
-            text-align: center;
-         }
-
-         tbody {
-            tr {
-               cursor: pointer;
-
-               &:nth-child(even) {
-                  background-color: #f3f4f6; // light-bg
-               }
-
-               &:hover {
-                  background-color: #eab20840;
-               }
-
-               &.maintained {
-                  color: red;
-                  background-color: rgba(255, 0, 0, 0.192);
-                  pointer-events: none;
-               }
-            }
-
-            td {
-               .form-check {
-                  display: flex;
-                  justify-content: center;
-
-                  .form-check-input {
-                     border: 1px gray solid;
-
-                     &:checked {
-                        background-color: gs.$primary-color;
-                     }
-                  }
-               }
-            }
          }
       }
    }
