--- a/public/reservation/reservation-page.css
+++ b/public/reservation/reservation-page.css
@@ -153,7 +153,6 @@ footer p {
   font-weight: bold;
 }
 .description-and-booking .description-box .description .card .info .closed {
-  color: #d32f2f;
   font-weight: bold;
 }
 .description-and-booking .description-box .summary-container {
@@ -179,7 +178,7 @@ footer p {
   line-height: 1.5;
 }
 .description-and-booking .booking {
-  flex: 1;
+  flex: 1.5;
 }
 .description-and-booking .booking h4 {
   font-size: 1.5rem;
@@ -194,6 +193,14 @@ footer p {
   padding: 1.5rem;
   border-radius: 0.5rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.description-and-booking .booking .card .form-group-row {
+  display: flex;
+  gap: 10px;
+  width: 100%;
+}
+.description-and-booking .booking .card .form-group-row .form-group {
+  flex-grow: 1;
 }
 .description-and-booking .booking .card .form-group {
   margin-bottom: 1rem;
@@ -240,6 +247,7 @@ footer p {
   padding: 0.75rem;
   border: none;
   border-radius: 0.375rem;
+  font-weight: bold;
   cursor: pointer;
 }
 .description-and-booking .booking .card button:hover {
