--- a/public/reservation/reservation-page.scss
+++ b/public/reservation/reservation-page.scss
@@ -98,7 +98,6 @@
                }
 
                .closed {
-                  color: #d32f2f;
                   font-weight: bold;
                }
             }
@@ -134,7 +133,7 @@
    }
 
    .booking {
-      flex: 1;
+      flex: 1.5;
 
       h4 {
          font-size: 1.5rem;
@@ -150,6 +149,16 @@
          padding: 1.5rem;
          border-radius: 0.5rem;
          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+         .form-group-row {
+            display: flex;
+            gap: 10px;
+            width: 100%;
+
+            .form-group {
+               flex-grow: 1;
+            }
+         }
 
          .form-group {
             margin-bottom: 1rem;
@@ -180,7 +189,7 @@
                border: 1px solid #d1d5db;
                border-radius: 0.375rem;
                outline: none;
-               
+
                &:focus {
                   border-color: gs.$primary-color;
                   box-shadow: 0 0 0 2px rgba(234, 179, 8, 0.5);
@@ -204,7 +213,9 @@
             padding: 0.75rem;
             border: none;
             border-radius: 0.375rem;
+            font-weight: bold;
             cursor: pointer;
+            
             &:hover {
                background: gs.$primary-hover;
             }
